# usermode

./: Makefile  README.md  usermode-1.111-userhelper-manpage-fix-exit-status-description.patch  usermode.spec
src/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  consolehelper-gtk.8  consolehelper-nox.c  consolehelper.8.in  consolehelper.c  dummy.h  gsmclient.c  gsmclient.h  pam-panel-icon.1  pam-panel-icon.c  props.c  props.h  shutdown  shvar.c  shvar.h  test-userdialog.c  userdialogs.c  userdialogs.h  userhelper-messages.c  userhelper-messages.h  userhelper-wrap.c  userhelper-wrap.h  userhelper.8.in  userhelper.c  userhelper.h  userinfo.1  userinfo.c  userinfo.desktop.in  usermount.1  usermount.c  usermount.desktop.in  userpasswd.1  userpasswd.c  userpasswd.desktop.in
src/po/: LINGUAS  POTFILES.in  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  es.po  et.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  ko.po  lv.po  mai.po  mk.po  ml.po  (+26 more)
src/sample/: README
